# SpaceBattles

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
GameServer/: CMakeLists.txt
GameServer/include/: CommandQueue.h  Commands.h  ExceptionHandler.h  Handlers.h  Interfaces.h  Move.h  MovingObjectAdapter.h  PropertyNames.h  Rotate.h  RotatingObjectAdapter.h  Structures.h  UEntity.h
GameServer/src/: Handlers.cpp  Move.cpp  MovingObjectAdapter.cpp  Rotate.cpp  RotatingObjectAdapter.cpp  UEntity.cpp
Test/: CMakeLists.txt
Test/src/: TestMain.cpp
